# weresocool

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  PKGBUILD  Procfile  README.md  TODO.sh  TODO2.sh  antonis.socool  bug.socool  build.rs  build_static.rs  build_static.sh  calc1.rs  composition.json  csv.sh  data.socool  demo.socool  deny.toml  edit-or-play  format.sh  format_ci.sh  fvif.py  goal.txt  justfile  lang.socool  maria.socool  meetup.socool  mic  new  npy_test.py  package.json  pbcopy  plan.sh  plan.txt  plan2.sh  play  (+31 more)
.cargo/: config
.github/: dependabot.yml
.makam-cache/: 1456688513.makam-cache
NEW/: test.py
analyze/: Cargo.toml
analyze/src/: lib.rs
application/: .eslintignore  .eslintrc.js  .prettierrc  README.md  afterSignHook.js  package.json  package.json.yarn  tsconfig.json  tsconfig.tsbuildinfo
application/server/: Cargo.toml  README.md  build_static.sh
application/server/src/: main.rs
application/server/src/server/: mod.rs  print.rs  stems.rs  types.rs  volume.rs
ast/: Cargo.toml
ast/src/: ast.rs  generator.rs  lib.rs  list.rs
ast/src/datagen/: 1d_test_data.csv  2d_test_data.csv  csv1d_test.rs  csv2d_test.rs  csv_test.rs  mod.rs  mod_1d.rs  ringbuffer.rs  test.rs  test_data.csv
ast/src/datagen/data/: sample_audvis_filt-0-40_raw_chanel_EEG_008_array_0.csv
ast/src/generator/: apply_to_normal_form.rs  coefs.rs  generate.rs  get_length_ratio.rs  mod.rs  substitute.rs
ast/src/lists/: indices.rs  mod.rs  normalize_listop.rs  substitute_list.rs
ast/src/nameset/: mod.rs
ast/src/operations/: function_tests.rs  get_length_ratio.rs  helpers.rs  mod.rs  normalize.rs  normalize_listop.rs  normalize_nf.rs  normalize_term.rs  normalize_tests.rs  substitute.rs
ast/src/operations/mocks/: simple_fun.socool
ast/src/term/: mod.rs
benches/: generate_waveform_bench.rs  nf_to_vec_renderable_bench.rs  perf.rs  render_batch_bench.rs  render_manager_read_bench.rs  render_op_render_bench.rs
core/: Cargo.toml  README.md
core/src/: lib.rs  main.rs  write.rs
core/src/generation/: csv.rs  json.rs  mod.rs  op4d.rs  parsed_to_render.rs  test.rs  timed_op.rs  types.rs
core/src/makam/: fastprinter.makam  init.makam  pipe.makam  ratio.makam  tests.makam
core/src/manager/: mod.rs  render_manager.rs  resizeable_2d_vec.rs  server_manager.rs
core/src/portaudio/: duplex.rs  mod.rs  real_time.rs  real_time_buffer_manager.rs  real_time_render_manager.rs  real_time_render_manager_mic.rs  server_render_manager.rs  shader.frag.spv  shader.vert.spv
core/src/renderable/: mod.rs
core/src/testing/: hashes.json
core/src/testing/expect_tests/: mod.rs
core/src/testing/snapshot_tests/: asr_test_3.socool  std_test.socool  ta_test.socool
core/src/ui/: mod.rs
datagen/: Cargo.toml
e2e_tests/: Cargo.toml
e2e_tests/src/: main.rs
e2e_tests/src/mocks/: index_with_term.socool  list_fit_length.socool  list_id.socool  list_named_indexed_fit_length.socool  list_with_random.socool  simple_list.socool
e2e_tests/src/snapshot/: expect.rs  mod.rs
e2e_tests/src/tests/: mod.rs
e2e_tests/testing/: mod.rs
e2e_tests/testing/mocks/: simple_fail.socool
error/: Cargo.toml
error/src/: error.rs  error_inner.rs  id_error.rs  index_error.rs  io_error.rs  lib.rs  parse_error.rs  portaudio_error.rs
filter/: Cargo.toml
filter/src/: asdr.rs  lib.rs  test.rs
filters/: Cargo.toml
filters/src/: main.rs
instrument/: Cargo.toml  README.md
instrument/lanceverb/: .travis.yml  Cargo.toml  README.md
instrument/lanceverb/examples/: test.rs
instrument/lanceverb/src/: delay_line.rs  dsp_node.rs  lib.rs  reverb.rs
instrument/reverb/: Cargo.toml  ORIGINAL_LICENSE.md  README.md
instrument/reverb/src/: delay_line.rs  dsp_node.rs  lib.rs  reverb.rs
instrument/src/: asr.rs  asr_test.rs  distortion.rs  frequency.rs  gain.rs  karplus_strong.rs  lib.rs  loudness.rs  oscillator.rs  sample.rs  stereo_waveform.rs  test.rs  voice.rs
instrument/src/filters/: mod.rs
instrument/src/renderable/: mod.rs  render_voice.rs  test.rs
lame/: Cargo.toml  README.md  build.rs
lame/src/: ffi.rs  lib.rs
nn/: .gitignore  datagen.py  helpers.py  network.py  network2.py  np2.py  np3.py  npy_test.py  template_data.csv  tests.py  train.py  train2.py
opmap/: Cargo.toml  README.md  justfile
opmap/src/: lib.rs
parser/: .gitignore  Cargo.toml  README.md  TODO.sh  lang.socool  parser_test.sh  working.socool
parser/src/: api.rs  ast.rs  comment_stripper.rs  error_handling.rs  et.rs  float_to_rational.rs  imports.rs  indices.rs  lib.rs  main.rs  parser.rs  socool.lalrpop  socool.lalrpop.bak  test.rs
portaudio/: Cargo.toml  README.md
portaudio/examples/: blocking.rs
portaudio/rust-portaudio-sys/: Cargo.toml  README.md  build.rs  pa_stable_v190600_20161030.tgz 
portaudio/rust-portaudio-sys/portaudio/src/common/: pa_memorybarrier.h
portaudio/rust-portaudio-sys/portaudio/src/hostapi/coreaudio/: pa_mac_core.c  pa_mac_core_blocking.c  pa_mac_core_blocking.h  pa_mac_core_internal.h  pa_mac_core_utilities.c
portaudio/rust-portaudio-sys/src/: lib.rs  portaudio.rs
portaudio/src/: error.rs  lib.rs  stream.rs  types.rs
rational/: Cargo.toml
renders/: Language.socool.csv  Language.socool.json  again.socool.json  airplane.socool.json  alex.socool.csv  alex.socool.json  antonis.socool.json  arcs.socool.json  bach_fugue_1.socool.csv  bach_fugue_1.socool.json  bach_prelude_2.socool.csv  bach_prelude_2.socool.json  bach_prelude_3.socool.csv  bach_prelude_3.socool.json  ben.socool.json  counterpoint_1.socool.json  dance.socool.json  darn_that_dream.socool.json  day_0.socool.json  day_1.socool.json  day_2.socool.json  day_3.socool.json  day_4.socool.json  day_5.socool.json  day_5_2.socool.json  day_6.socool.json  day_6_3.socool.json  day_7.socool.json  hao.socool.json  (+47 more)
ring_buffer/: Cargo.toml  README.md
ring_buffer/src/: lib.rs
scop/: Cargo.toml  README.md
scop/src/: lib.rs  main.rs  test.rs
shared/: Cargo.toml
shared/src/: cool_ratio.rs  helpers.rs  lib.rs  settings.rs
vorbis/: Cargo.toml  README.md
vorbis/src/: lib.rs  main.rs  test.socool
(+777 files in other folders)
