[package]
name = "weresocool"
version = "1.0.0"
edition = "2021"
authors = ["Danny <weresocool@xasopheno.com>"]
description = "***** WereSoCool __!Now In Stereo!__ ****** Make cool sounds. Impress your friends."
license = "GPL-3.0" 
autobins = false
repository = "https://github.com/xasopheno/WereSoCool"
keywords = ["microtonal", "binaural", "composition",  "audio", "music"]
categories = ["multimedia::audio"]
readme = "README.md"
resolver="2"

exclude = [
    "renders/*",
    "imgs/*",
]

[dependencies]
scop = { path = "scop", version = "1.0.0" }
opmap = { path = "opmap", version = "0.1.0" }
weresocool_core = { path = "core", version = "1.0.0", optional = true }
weresocool_ring_buffer = { path = "ring_buffer", version = "1.0.0" }
weresocool_analyze = { path = "analyze", version = "1.0.0" }
weresocool_parser = { path = "parser", version = "1.0.0", default_features=false, optional=true }
weresocool_ast = { path = "ast", version = "1.0.0", default_features=false, optional=true }
weresocool_error = { path = "error", version = "1.0.0", default_features=false, optional=true } 
weresocool_instrument = { path = "instrument", version = "1.0.0", default_features=false, optional=true } 
weresocool_lame = { path = "lame", version = "1.0.0", optional=true } 
weresocool_shared = { path = "shared", version = "1.0.0" } 
weresocool_vorbis = { path = "vorbis", version = "0.1.0", optional = true } 
portaudio = { version="0.7.0", optional=true }
rand = { version="0.7.3", features=["wasm-bindgen"]}
hound = "3.4.0"
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.64"
serde_derive = "1.0.126"
colored = "2.0.0"
pbr = { version="1.0.4", optional=true }
clap = "2.33.3"
num-rational = "0.3.2"
rayon = "1.5.1"
indexmap = { version = "1.7.0", features = ["serde-1"] }
difference = "2.0.0"
term = "0.7.0"
uuid = { version = "0.8.2", features = ["v4", "stdweb"] }
num-complex = "0.3.1"
num = "0.3.1"
csv = "1.1.5"
failure = "0.1.8"
failure_derive = "0.1.8"
futures = "0.3.12"
bytes = "1.0.1"
env_logger = "0.8.2"
test-generator = "0.3.0"
float-cmp = "0.8.0"
zip = { version="0.5.12", optional=true }
crossbeam-channel = "0.5.4"
thiserror = "1.0.31"
notify = "5.0.0-pre.14"

[features]
default=["app"]
app=["portaudio", "weresocool_lame", "weresocool_core", 
    "weresocool_vorbis", 
    "pbr", "zip", "weresocool_error/app", 
  "weresocool_parser/app", "weresocool_instrument/app", "weresocool_ast/app"]

wasm = ["weresocool_ast/wasm", "weresocool_instrument/wasm", "weresocool_parser/wasm", "weresocool_error/wasm"]


[dev-dependencies]
pretty_assertions = "0.6.1"
criterion = "0.3.3"

[[bench]]
name = "render_batch_bench"
harness = false
[[bench]]
name = "nf_to_vec_renderable_bench"
harness = false

[workspace]
members = [
    "analyze",
    "opmap",
    "ast",
    "error",
    "instrument",
    "lame",
    "parser",
    "shared",
    "scop",
    "ring_buffer",
    # "vorbis",
    "core"
]


[[bin]]
name = "main"
path = "src/main.rs"

# [[bin]]
# name = "stems"
# path = "bin/stems.rs"

# [[bin]]
# name = "real_time"
# path = "bin/real_time.rs"

# [[bin]]
# name = "mic"
# path = "bin/real_time_mic.rs"

# [[bin]]
# name = "scratch"
# path = "bin/pad.rs"

# [[bin]]
# name = "snapshot"
# path = "bin/snapshot.rs"

