[package]
name = "weresocool"
version = "1.0.47"
edition = "2021"
authors = ["Danny <weresocool@xasopheno.com>"]
description = "***** WereSoCool __!Now In Stereo!__ ****** Make cool sounds. Impress your friends."
license = "GPL-3.0" 
autobins = false
repository = "https://github.com/xasopheno/WereSoCool"
keywords = ["microtonal", "binaural", "composition",  "audio", "music"]
categories = ["multimedia::audio"]
readme = "README.md"
resolver="2"
default-run = "weresocool"

exclude = [
    "imgs/*",
]

# [build]
# rustflags = ["-Z", "sanitizer=leak"]

# [profile.release]
# debug = true

[package.metadata.arch]
arch = ["x86_64"]
makedepends = ["cargo", "lame", "vorbis-tools"]
depends = ["lame", "vorbis-tools"]
provides = ["weresocool"]

[target.'cfg(target_os = "windows")'.dependencies]
weresocool_core = { path="core", version = "^1.0.47", features = ["windows"] }
weresocool_error = { path = "error", version = "^1.0.47", features=["windows"] } 
[target.'cfg(target_os = "linux")'.dependencies]
weresocool_core = { path="core", version = "^1.0.47", features = ["windows"] }
weresocool_error = { path = "error", version = "^1.0.47", features=["windows"] } 
[target.'cfg(target_os = "macos")'.dependencies]
weresocool_core = { path="core", version = "^1.0.47", features = ["app"] }
weresocool_error = { path = "error", version = "^1.0.47", features=["app"] } 

[dependencies]
weresocool_core = { path="core", version = "^1.0.47", default_features=false }
weresocool_error = { path = "error", version = "^1.0.47", default_features=false } 
weresocool_parser = { path = "parser", version = "^1.0.47", default_features=false, optional=true }
weresocool_ast = { path = "ast", version = "^1.0.47", default_features=false, optional=true }
weresocool_instrument = { path = "instrument", version = "^1.0.47", default_features=false, optional=true } 
weresocool_portaudio = { path = "portaudio", version = "^1.0.47", default_features=false, optional=true } 
scop = { path = "scop", version = "^1.0.47" }
opmap = { path = "opmap", version = "^1.0.47" }
weresocool_shared = { path = "shared", version = "^1.0.47" } 
weresocool_analyze = { path = "analyze", version = "^1.0.47" }
weresocool_ring_buffer = { path = "ring_buffer", version = "^1.0.47" }
clap = "4.3.8"
thiserror = "1.0.4"
notify = "5.0.0-pre.14"
zip = { version="0.6.6", optional=true }
hound = { version="3.4.0", optional=true }
assert_cmd = { version="2.0.4", optional=true }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
term = "0.7.0"
num-rational = "0.4.1"
indexmap = { version = "2.0.0", features = ["serde"] }
difference = "2.0.0"
test-generator = "0.3.0"
crossbeam-channel = "0.5.6"
indoc = "1.0.7"
colored = "2.0.0"
rand = { version="0.7.3", features=["wasm-bindgen"]}
fastapprox = "0.3.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
criterion = "0.3.3"
pprof = { version = "0.3", features = ["flamegraph"] }
temp-dir = "0.1.11"

[features]
default=["app"]
app=["weresocool_error/app", "weresocool_core/app", "weresocool_parser/app", "weresocool_instrument/app", "weresocool_ast/app", "weresocool_core/app", "weresocool_portaudio", "zip", "hound", "assert_cmd"]
windows=["weresocool_error/windows", "weresocool_core/windows", "weresocool_parser/app", "weresocool_instrument/app", "weresocool_ast/app", "weresocool_portaudio", "zip", "hound", "assert_cmd"]
wasm = ["weresocool_core/wasm", "weresocool_ast/wasm", "weresocool_instrument/wasm", "weresocool_parser/wasm", "weresocool_error/wasm"]
print = ["hound"]


[[bench]]
name = "render_manager_read_bench"
harness = false
[[bench]]
name = "render_op_render_bench"
harness = false
[[bench]]
name = "render_batch_bench"
harness = false
[[bench]]
name = "nf_to_vec_renderable_bench"
harness = false
[[bench]]
name = "generate_waveform_bench"
harness = false

[workspace]
members = [
    "core",
    "analyze",
    "filter",
    "opmap",
    "ast",
    "error",
    "instrument",
    "lame",
    "parser",
    "portaudio",
    "shared",
    "scop",
    "ring_buffer",
    "vorbis",
]


[[bin]]
name = "weresocool"
path = "src/main.rs"

# [[bin]]
# name = "stems"
# path = "bin/stems.rs"

# [[bin]]
# name = "real_time"
# path = "bin/real_time.rs"

# [[bin]]
# name = "mic"
# path = "bin/real_time_mic.rs"

# [[bin]]
# name = "scratch"
# path = "bin/pad.rs"

## This is a hack. I don't want this binary to be built for users,
## but I need it to run tests.
[[example]]
name = "snapshot"
path = "bin/snapshot.rs"

