[package]
name = "weresocool_analyze"
version = "1.0.37"
authors = ["Danny Meyer <weresocool@xasopheno.com>"]
edition = "2021"
description = "audio analysis for WereSoCool"
license = "GPL-3.0" 
resolver="2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
weresocool_shared = { path = "../shared", version = "^1.0.37" }
