[package]
name = "weresocool_ast"
version = "1.0.47"
authors = ["Danny Meyer <weresocool@xasopheno.com>"]
edition = "2021"
description = "AST for WereSoCool"
license = "GPL-3.0" 
resolver="2"

[dependencies]
weresocool_ring_buffer = { path = "../ring_buffer", version = "^1.0.47" }
weresocool_error = { path = "../error", version = "^1.0.47", default_features=false, optional=true }
weresocool_filter = { path = "../filter", version = "^1.0.45" } 
weresocool_shared = { path = "../shared", version = "^1.0.47" }
scop = { path = "../scop", version = "^1.0.47" }
num-rational = { version = "0.4.1", features = ["serde"] } 
rand = { version="0.7.3", features=["wasm-bindgen"]}
serde = { version = "1.0.164", features = ["derive"] }
pretty_assertions = "0.6.1"
indexmap = "2.0.0"
colored = "2.0.0"
num-traits = "0.2.14"
num-integer = "0.1.44"
polynomials = "0.2.4"
meval = "0.2.0"
csv = "1.1.6"
hamcrest2 = "0.3.0"
peekread = "0.1.1"

[features]
default=["app"]
app=["weresocool_error/app"]
wasm=["weresocool_error/wasm"]
