[package]
name = "weresocool_tests"
version = "0.1.0"
authors = ["Danny Meyer <Danny.Meyer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
term = "0.6.1"
weresocool_ast = { path = "../ast" }
weresocool_error = { path = "../error" }
weresocool_parser = { path = "../parser" }
weresocool = { path = "../" }
difference = "2.0.0"
indexmap = "1.3.2"
num-rational = "0.2.3"
serde = "1.0.104"
serde_json = "1.0.48"
