[package]
name = "weresocool_error"
version = "1.0.36"
authors = ["Danny Meyer <weresocool@xasopheno.com>"]
edition = "2021"
description = "Errors for WereSoCool"
license = "GPL-3.0"

[dependencies]
weresocool_lame = { path = "../lame", version = "^1.0.36", optional=true}
scop = { path = "../scop", version = "^1.0.36" }
portaudio = {version="0.7.0", optional=true}
hound = "3.4.0"
serde_json = "1.0.64"
serde = { version = "1.0.119", features = ["derive"] }
csv = "1.1.5"
wasm-bindgen = { version="0.2.74", optional=true, features=["serde-serialize"] }
thiserror = "1.0.24"

[features]
default= ["app"]
app = ["portaudio", "weresocool_lame"]
wasm = ["wasm-bindgen"]

