[package]
name = "weresocool_error"
version = "1.0.39"
authors = ["Danny Meyer <weresocool@xasopheno.com>"]
edition = "2021"
description = "Errors for WereSoCool"
license = "GPL-3.0"

[target.'cfg(target_os = "macos")'.dependencies]
weresocool_lame = { path = "../lame", version = "^1.0.39" } 

[target.'cfg(target_os = "linux")'.dependencies]
weresocool_lame = { path = "../lame", version = "^1.0.39" } 

[dependencies]
scop = { path = "../scop", version = "^1.0.39" }
weresocool_portaudio = { path = "../portaudio", version = "^0.7.0", optional=true } 
hound = "3.4.0"
serde_json = "1.0.64"
serde = { version = "1.0.119", features = ["derive"] }
csv = "1.1.5"
wasm-bindgen = { version="0.2.74", optional=true, features=["serde-serialize"] }
thiserror = "1.0.24"

[features]
default= ["app"]
app = ["weresocool_portaudio"]
windows = ["weresocool_portaudio"]
wasm = ["wasm-bindgen"]

