[package]
name = "weresocool_error"
version = "1.0.47"
authors = ["Danny Meyer <weresocool@xasopheno.com>"]
edition = "2021"
description = "Errors for WereSoCool"
license = "GPL-3.0"

[target.'cfg(target_os = "macos")'.dependencies]
weresocool_lame = { path = "../lame", version = "^1.0.47" } 

[target.'cfg(target_os = "linux")'.dependencies]
weresocool_lame = { path = "../lame", version = "^1.0.47" } 

[dependencies]
scop = { path = "../scop", version = "^1.0.47" }
weresocool_portaudio = { version = "1.0.47", optional = true, git = "https://github.com/xasopheno/weresocool_portaudio"}
hound = "3.4.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
csv = "1.1.5"
wasm-bindgen = { version="0.2.86", optional=true, features=["serde-serialize"] }
thiserror = "1.0.4"

[features]
default= ["app"]
app = ["weresocool_portaudio"]
windows = ["weresocool_portaudio"]
wasm = ["wasm-bindgen"]

