[package]
name = "weresocool_filter"
version = "1.0.45"
edition = "2021"
authors = ["Danny Meyer <weresocool@xasopheno.com>"]
description = "filters for WereSoCool"
license = "GPL-3.0"

[dependencies]
weresocool_shared = { path = "../shared", version = "^1.0.45" } 
num-rational = { version = "0.3.2", features = ["serde"] } 
serde = { version = "1.0.119", features = ["derive"] }
