[package]
name = "filters"
version = "1.0.0"
authors = ["Danny Meyer <weresocool@xasophenoo.com>"]
edition = "2021"
description = "filters wip"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.4"

[dev-dependencies]
probability = "0.15.12"
