[package]
name = "weresocool_instrument"
version = "0.1.0"
authors = ["xasopheno <danny@xasopheno.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
weresocool_ast = { path = "../ast" }
weresocool_error = { path = "../error", optional=true }
weresocool_parser = { path = "../parser" }
weresocool_shared = { path = "../shared" }
serde = { version = "1.0.119", features = ["derive"] }
reverb = { path = "reverb" }
rayon = "1.5.0"
num-rational = "0.3.2"
rand = { version="0.7.3", features=["wasm-bindgen"]}
num-traits = "0.2.14"

[features]
default=["app"]
app=["weresocool_error/app"]
wasm=["weresocool_error/wasm"]
