[package]
name = "weresocool_instrument"
version = "1.0.40"
authors = ["Danny Meyer <weresocool@xasopheno.com>"]
edition = "2021"
description = "audio renderer for WereSoCool"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
weresocool_ast = { path = "../ast", version = "^1.0.40", default_features=false, optional=true }
weresocool_error = { path = "../error", version = "^1.0.40", default_features=false, optional=true }
weresocool_parser = { path = "../parser", version = "^1.0.40", default_features=false, optional=true }
weresocool_shared = { path = "../shared", version = "^1.0.40" }
scop = { path = "../scop", version = "^1.0.40" }
serde = { version = "1.0.119", features = ["derive"] }
reverb = { path = "reverb", version = "^1.0.40" }
rayon = "1.5.1"
num-rational = "0.3.2"
rand = { version="0.7.3", features=["wasm-bindgen"]}
num-traits = "0.2.14"

[features]
default=["app"]
app=["weresocool_ast/app", "weresocool_error/app", "weresocool_parser/app"]
wasm=["weresocool_ast/wasm", "weresocool_error/wasm", "weresocool_parser/wasm"]
