[package]
name = "weresocool_lame"
version = "1.0.45"
authors = ["Danny Meyer <weresocool@xasophenoo.com>"]
edition = "2021"
description = "Lame FFI for WereSoCool"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.111", features = ["derive"] }
thiserror = "1.0.24"
