[package]
name = "weresocool_parser"
version = "0.5.0"
authors = ["Danny Meyer <weresocool@xasopheno.com>"]
edition = "2021"
build = "build.rs" # LALRPOP preprocessing
description = "Parser for WereSoCool"
license = "GPL-3.0" 
resolver="2"

[build-dependencies.lalrpop]
version = "0.19.6"
features = ["lexer"]

[dependencies]
lalrpop-util = { version="0.19.6", features=["lexer"]}
regex = "1.5.5"
colored = "2.0.0"
num-rational = "0.3.2"
indexmap = "1.6.1"
rand = { version="0.7.3", features=["wasm-bindgen"]}
path-clean = "0.1.0"
weresocool_ast = { path = "../ast", default_features=false, optional=true }
weresocool_error = { path = "../error", default_features=false, optional=true }
uuid = { version = "0.8", features = ["serde", "v4"] }
scop = { path = "../scop" }

[features]
default=["app"]
app=["weresocool_error/app", "weresocool_ast/app"]
wasm=["weresocool_error/wasm", "weresocool_ast/wasm"]
