[package]
name = "weresocool_parser"
version = "1.0.1"
authors = ["Danny Meyer <weresocool@xasopheno.com>"]
edition = "2021"
build = "build.rs" # LALRPOP preprocessing
description = "Parser for WereSoCool"
license = "GPL-3.0" 
resolver="2"

[build-dependencies.lalrpop]
version = "0.19.6"
features = ["lexer"]

[dependencies]
weresocool_ast = { path = "../ast", version = "1.0.1", default_features=false, optional=true }
weresocool_error = { path = "../error", version = "1.0.1", default_features=false, optional=true }
scop = { path = "../scop", version = "1.0.1" }
lalrpop-util = { version="0.19.6", features=["lexer"]}
regex = "1.5.4"
colored = "2.0.0"
num-rational = "0.3.2"
indexmap = "1.6.1"
rand = { version="0.7.3", features=["wasm-bindgen"]}
path-clean = "0.1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

[features]
default=["app"]
app=["weresocool_error/app", "weresocool_ast/app"]
wasm=["weresocool_error/wasm", "weresocool_ast/wasm"]
