[package]
name = "scop"
version = "1.0.39"
authors = ["Danny Meyer <weresocool@xasopheno.com>"]
edition = "2021"
description = "Lame FFI for WereSoCool"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.25"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0.119", features = ["derive"] }
indexmap = { version = "1.6.1", features = ["serde-1"] }
