[package]
name = "scop"
version = "1.0.47"
authors = ["Danny Meyer <weresocool@xasopheno.com>"]
edition = "2021"
description = "Lame FFI for WereSoCool"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.4"
uuid = { version = "0.8", features = ["serde", "v4", "stdweb"] }
serde = { version = "1.0.164", features = ["derive"] }
indexmap = { version = "2.0.0", features = ["serde"] }
