[package]
name = "weresocool_shared"
version = "1.0.38"
authors = ["Danny Meyer <weresocool@xasopheno.com>"]
edition = "2021"
description = "shared for WereSoCool"
license = "GPL-3.0" 
resolver="2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-cmp = "0.8.0"
num-rational= "0.3"
