[package]
name = "weresocool_vorbis"
version = "1.0.38"
edition = "2021"
description = "Vorbis for WereSoCool"
license = "GPL-3.0" 
resolver="2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hound = "3.4.0"
itertools = "0.10.3"
vorbis-encoder = "0.1.4"

[dev-dependencies]
hamcrest2 = "0.3.0"
