[package]
name = "weresocool_server"
version = "1.0.0"
authors = ["Danny Meyer <weresocool@xasopheno.com>"]
edition = "2021"
description = "server for WereSoCool application"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[profile.release]
#debug = true

[dependencies]
weresocool_error = { path = "../../error", version = "1.0.0" } 
weresocool = { path = "../../", version = "1.0.0", package="weresocool_core" } 
actix-cors = "0.2.0"
actix-files = "0.2.1"
actix-web = "2.0.0"
actix-service = "1.0.5"
async-std = "1.5.0"
actix-http = "1.0.1"
actix-rt = "1.1.1"
env_logger = "0.7.1"
serde = "1.0.105"
rust-embed = "5.5.1"
mime_guess = "2.0.3"
signal-hook = "0.1.14"
