[package]
name = "weresocool_portaudio_sys"
version = "0.1.0"
authors = ["Jeremy Letang <letang.jeremy@gmail.com>",
           "Mitchell Nordine <mitchell.nordine@gmail.com>",
           "Danny Meyer <weresocool@xasopheno.com>"
          ]
description = "PortAudio bindings for Rust."
license = "MIT"
build = "build.rs"
homepage = "https://github.com/xasopheno/weresocool"
repository = "https://github.com/xasopheno/weresocool.git"
links = "portaudio"

[lib]
name = "weresocool_portaudio_sys"
crate-type = ["rlib"]

[build-dependencies]
cc = "1"
